# fastapi_sqlalchemy_v2_alembic

./: README.md  alembic.ini  main.py  pyproject.toml
alembic/: env.py
alembic/versions/: 2023_08_12_1709-f9c178f4409f_add_user_model.py
api/: user.py
app/: settings.py
article/: article_backup_13_08_2023.html
orm/: __init__.py  base_model.py  session_manager.py  user_model.py
tests/: conftest.py  db_utils.py  test_api.py  test_orm_works.py
tests/migrations/: conftest.py  test_stairway.py
