[tool.poetry]
name = "fastapi-sqlalchemy-2-alembic"
version = "0.1.0"
description = ""
authors = ["Dmitry Plevkov <wwarne@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.101.0"
uvicorn = "^0.23.2"
uvloop = "^0.17.0"
asyncpg = "^0.28.0"
alembic = "^1.11.2"
pydantic-settings = "^2.0.2"
sqlalchemy = {version = "^2.0.19", extras = ["asyncio"]}


[tool.poetry.group.dev.dependencies]
httpx = "^0.24.1"
sqlalchemy-utils = "^0.41.1"
pytest = "^7.4.0"
yarl = "^1.9.2"
mypy = "^1.5.0"
black = "^23.7.0"
isort = "^5.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.mypy]
plugins = [
  "pydantic.mypy"
]

follow_imports = "normal"
warn_redundant_casts = true
warn_unused_ignores = true
disallow_any_generics = true
check_untyped_defs = true
no_implicit_reexport = true

# for strict mypy: (this is the tricky one :-))
disallow_untyped_defs = true

[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true
warn_required_dynamic_aliases = true

[[tool.mypy.overrides]]
module = "tests.*"
ignore_errors = true

[tool.black]
target-version = ["py39"]
exclude = '''
(
  /(
      \.git
    | \.mypy_cache
    | venv
    | alembic
  )/
)
'''

[tool.isort]
# isort configuration:
# https://pycqa.github.io/isort/index.html
# See https://pycqa.github.io/isort/docs/configuration/profiles.html
profile = "black"
skip_glob = ['venv', 'alembic']
combine_as_imports = true
combine_star = true